--- a/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWVotingListView.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWVotingListView.xib
@@ -142,7 +142,7 @@
                         <action selector="modifyTheListMode:" destination="iN0-l3-epB" eventType="touchUpInside" id="Sf6-Ic-Btu"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BeP-5Q-J82">
+                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BeP-5Q-J82">
                     <rect key="frame" x="275" y="132.5" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="7UF-Nl-Pvg"/>
@@ -174,6 +174,7 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="AddModelButton" destination="BeP-5Q-J82" id="laO-5m-4m0"/>
                 <outlet property="baseCollectionView" destination="TOh-zh-fnS" id="OfD-Ug-hjl"/>
                 <outlet property="lab1" destination="3TG-1N-8dC" id="x1q-DA-vGW"/>
                 <outlet property="lab3" destination="73V-SG-wah" id="gdA-zx-FdG"/>
