--- a/UnionSquare.iOS/ELA/MeVC/view/HMWQrCodePopupWindowView.xib
+++ b/UnionSquare.iOS/ELA/MeVC/view/HMWQrCodePopupWindowView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,6 +16,14 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mqA-LX-o4h">
+                    <rect key="frame" x="110" y="256" width="155" height="155"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="155" id="3ze-pt-slD"/>
+                        <constraint firstAttribute="width" constant="155" id="NFp-P5-Wcx"/>
+                    </constraints>
+                </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lfK-1u-yyb">
                     <rect key="frame" x="112.5" y="258.5" width="150" height="150"/>
                     <constraints>
@@ -26,7 +34,9 @@
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="lfK-1u-yyb" firstAttribute="centerY" secondItem="mqA-LX-o4h" secondAttribute="centerY" id="1hW-lP-zFX"/>
                 <constraint firstItem="lfK-1u-yyb" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ibs-cJ-fdn"/>
+                <constraint firstItem="lfK-1u-yyb" firstAttribute="centerX" secondItem="mqA-LX-o4h" secondAttribute="centerX" id="uBz-zt-ALH"/>
                 <constraint firstItem="lfK-1u-yyb" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="xkS-H9-Xn7"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
