--- a/UnionSquare.iOS/ELA/Wallet/walletCreate/HWMQrCodeTransferAndAddBuddyViewController.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletCreate/HWMQrCodeTransferAndAddBuddyViewController.xib
@@ -26,7 +26,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wmn-sH-NpT">
-                    <rect key="frame" x="190.5" y="312" width="33" height="30"/>
+                    <rect key="frame" x="15" y="312" width="384" height="30"/>
                     <color key="backgroundColor" red="0.32226195931434631" green="0.46272218227386475" blue="0.4783395528793335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Ce6-4t-BBx"/>
@@ -42,6 +42,14 @@
                         <constraint firstAttribute="height" constant="140" id="zfm-lP-H7t"/>
                     </constraints>
                 </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gYF-Jf-6xN">
+                    <rect key="frame" x="142" y="103" width="130" height="130"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="130" id="KHJ-2R-6uS"/>
+                        <constraint firstAttribute="height" constant="130" id="f0k-w1-5NO"/>
+                    </constraints>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wpr-gC-Lcb">
                     <rect key="frame" x="63" y="468" width="288" height="40"/>
                     <color key="backgroundColor" red="0.32654017210000003" green="0.5333263278" blue="0.53324335810000001" alpha="0.55887276789999996" colorSpace="custom" customColorSpace="sRGB"/>
@@ -72,6 +80,7 @@
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lj1-ri-h4s">
                     <rect key="frame" x="147" y="108" width="120" height="120"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="120" id="8bL-FT-ZZf"/>
                         <constraint firstAttribute="height" constant="120" id="Ac4-Of-hRu"/>
@@ -90,6 +99,7 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="gYF-Jf-6xN" firstAttribute="centerX" secondItem="0Ei-dH-fHp" secondAttribute="centerX" id="2xP-XW-Bm2"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="e9J-Fk-QTN" secondAttribute="trailing" constant="63" id="6D3-Ct-Jh4"/>
                 <constraint firstItem="0Ei-dH-fHp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7Ao-lB-iQC"/>
                 <constraint firstItem="Wmn-sH-NpT" firstAttribute="centerX" secondItem="lj1-ri-h4s" secondAttribute="centerX" id="9bh-FV-vy2"/>
@@ -98,12 +108,15 @@
                 <constraint firstItem="lj1-ri-h4s" firstAttribute="centerY" secondItem="0Ei-dH-fHp" secondAttribute="centerY" id="F7s-LS-thr"/>
                 <constraint firstItem="e9J-Fk-QTN" firstAttribute="top" secondItem="wpr-gC-Lcb" secondAttribute="bottom" constant="17" id="Fix-Ue-bLJ"/>
                 <constraint firstItem="wpr-gC-Lcb" firstAttribute="centerX" secondItem="lj1-ri-h4s" secondAttribute="centerX" id="G9V-aY-RuI"/>
+                <constraint firstItem="gYF-Jf-6xN" firstAttribute="centerY" secondItem="0Ei-dH-fHp" secondAttribute="centerY" id="Khx-Cu-lcj"/>
                 <constraint firstItem="wpr-gC-Lcb" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="63" id="Mm3-di-Q2l"/>
                 <constraint firstItem="lj1-ri-h4s" firstAttribute="centerX" secondItem="0Ei-dH-fHp" secondAttribute="centerX" id="Nr2-Uv-w75"/>
                 <constraint firstItem="wpr-gC-Lcb" firstAttribute="top" secondItem="Wmn-sH-NpT" secondAttribute="bottom" constant="126" id="Scy-0O-tU3"/>
                 <constraint firstItem="e9J-Fk-QTN" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="63" id="VdI-TK-hbW"/>
                 <constraint firstItem="QmJ-Hy-vbh" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cWW-hW-vLi"/>
                 <constraint firstItem="Wmn-sH-NpT" firstAttribute="top" secondItem="QmJ-Hy-vbh" secondAttribute="bottom" constant="25" id="iSA-Ut-uXW"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Wmn-sH-NpT" secondAttribute="trailing" constant="15" id="kVF-cE-t6m"/>
+                <constraint firstItem="Wmn-sH-NpT" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="pfI-Up-hgF"/>
                 <constraint firstItem="e9J-Fk-QTN" firstAttribute="centerX" secondItem="lj1-ri-h4s" secondAttribute="centerX" id="rao-KS-uU8"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="wpr-gC-Lcb" secondAttribute="trailing" constant="63" id="saJ-YX-Bha"/>
             </constraints>
