--- a/UnionSquare.iOS/ELA/Wallet/walletManage/ViewController/HMWExportTheMnemonicWordViewController.xib
+++ b/UnionSquare.iOS/ELA/Wallet/walletManage/ViewController/HMWExportTheMnemonicWordViewController.xib
@@ -80,7 +80,8 @@
                         </label>
                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="lZy-89-zKx">
                             <rect key="frame" x="251" y="9.5" width="51" height="31"/>
-                            <color key="onTintColor" red="0.28945052623748779" green="0.35176524519920349" blue="0.43599903583526611" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="onTintColor" red="0.050573058426380157" green="0.69829255342483521" blue="0.43160527944564819" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="thumbTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="ShowHidenView:" destination="-1" eventType="valueChanged" id="isn-qg-zcX"/>
                             </connections>
